update(main/Overhaul-Finale): Phased out the old menu system, cropss are overhauled with new settings, light, type, stages, etc. Weightt system added, exp, and so much more. Also implemented a new Menu history so it's easier to navigate around.